HelloWorldWebApp/.k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-hello-service
  namespace: quality
spec:
  selector:
    app: app-hello
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  sessionAffinity: None
